Fix layout overflow, background repeating

--- a/styles.css
+++ b/styles.css
@@ -4,13 +4,13 @@ body {
     background: rgb(20,20,20);
     background: linear-gradient(346deg, rgba(20,20,20,1) 59%, rgba(69,13,31,1) 70%, rgba(131,24,59,1) 83%, rgba(166,30,75,1) 94%, rgba(255,46,116,1) 100%);
     height: 100vh;
+    background-attachment: fixed;
     margin: 0px;
     padding: 0px;
 }
 
 .header {
     align-self: stretch;
-    flex: auto;
     text-align: center;
     padding: 64px 200px;
     font-size: 32px;
@@ -27,20 +27,18 @@ body {
     display: flex;
     flex-direction: column;
     margin: 0px;
-    padding: 80px 0px;
-    flex: 1;
     margin-top: 20px;
     color: white; 
     background-color: rgba(0, 0, 0, 0.2);
+    flex: auto;
 }
 
 .score {
     display: flex;
     justify-content: center;
     gap: 80px;
-    /* background-color: rgba(0, 0, 0, 0.2); */
     border-radius: 16px;
-    /* margin-top: 32px; */
+    margin-top: 32px;
 }
 
 .score div {
@@ -57,12 +55,9 @@ body {
     margin: 0px;
     color: white;
     border: 2px ins black;
-    width: max-content;
-    /* background-color: rgba(255, 255, 255, 0.1); */
 }
 
 .game {
-    /* background-color: #8EEFF0; */
     display: flex;
     justify-content: center;
     gap: 48px;
@@ -75,43 +70,48 @@ body {
     height: auto;
     border: 2px dotted white;
     background-color: rgba(126, 126, 126, 0.5);
-    animation-duration: 0.2s;
+    animation-duration: 0.4s;
     animation-name: stop_hover;
 }
 
 @keyframes stop_hover {
     from {
         background-color: rgba(126, 126, 126, 0.7);
+        border-radius: 8px;
     }
     to {
-        background-color: rgba(126, 126, 126, 0.5)
+        background-color: rgba(126, 126, 126, 0.5);
+        border-radius: 0px;
     }
 }
 
 .game img:hover {
-    animation-duration: 0.2s;
+    animation-duration: 0.4s;
     animation-name: hover;
     background-color: rgba(126, 126, 126, 0.7);
+    border-radius: 8px;
     cursor: grab;
 }
 
 @keyframes hover {
     from {
-        /* border: 2px dotted white; */
+        border-radius: 0px;
         background-color: rgba(126, 126, 126, 0.5);
     }
     to {
-        /* border: 2px solid white; */
+        border-radius: 8px;
         background-color: rgba(126, 126, 126, 0.7);
     }
 }
 
 footer {
-    /* margin: auto; */
-    width: 100vw;
+    margin: auto;
+    width: 100%;
     text-align: center;
+    padding: 20px;
     padding: 20px 0px;
     font-size: 20px;
+    margin-top: 20px;
     color: gray;
     background-color: rgba(126, 126, 126, 0.1);
 }
